R293: clear handwritten, infra, and generated-code build warnings (phases 1-2)
Mechanical sweep + emitter fixes from the R293 plan. A full
`mvn install -Plocal-db` now emits zero in-scope [WARNING] lines; the only
survivors are the declared-out-of-scope environment ones (sandbox jOOQ
PG-version mismatch, Maven's own Guice/Unsafe JVM warnings).

Handwritten sources:
- serialVersionUID on the four sakila-service @error exception classes
- dangling javadoc (5): re-attached the orphaned blocks to the methods they
  document (FilmService.titleTitlecase, FilmCarrierWithErrorsService.filmsByIds,
  two FederationBuildSmokeTest cases) and merged the split synthesizeFkJoin
  javadoc in BuildContext
- raw graphql.language.Value loop var (CatalogBuilder), raw TypeDefinition /
  Definition loop vars + unchecked directive() (ClassifiedHarness,
  QueryViewRenderer), raw org.jooq.Row2 array (FilmActorCarrierService, via the
  existing suppression widened to rawtypes)
- deprecated TypeDefinitionRegistry.getType swept to getTypeOrNull across the
  test sources (ClassifiedHarness, QueryViewRenderer, SchemaSdlEmitterTest,
  SchemaSdlEmissionTest, ConnectionFederationTagPipelineTest); the null-return
  control flow adapted (requireNonNull / null checks / isNull assertions)
- Charsets.UTF_8 -> StandardCharsets.UTF_8 (TypesEclipseTest)

Build infrastructure:
- graphitron-lsp FFM restricted-method calls: @SuppressWarnings("restricted")
  at the three call sites, with a comment pointing at the pom argLine
- the runtime FFM warning fired in graphitron-maven-plugin's DevServerTest
  (loads the lsp jar without native access); added --enable-native-access to
  that module's surefire too
- the AbstractRewriteMojo javadoc-link warning comes from maven-plugin-plugin's
  descriptor generator, not javadoc; its link resolver cannot resolve JDK-class
  {@link} regardless of signature, so switched to {@code String.endsWith(String)}
- excluded junit-platform.properties from the graphitron test-jar so co